# website-scanner

./: .gitignore  CiClass.py  CsrfClass.py  Main.py  README.md  SqlClass.py  XssClass.py  baseClass.py  ci_queries.txt  csrf_headers.txt  fast_api.py  javascript_test.html  magshimim11.py  pyproject.toml  sql_queries.txt  test_for_js.html
Scanner/: CiClass.py  CsrfClass.py  Main.py  Scanner.py  SqlClass.py  XssClass.py  baseClass.py  csrf_headers.txt  fast_api.py  sql_queries (2).txt  xss_queries.txt
Scripts/: Activate.ps1  SQLclass.py  activate  activate.bat  baseClass.py  easy_install-3.7-script.py  easy_install-script.py  pip-script.py  pip3-script.py  pip3.7-script.py  server.py  test_for_julia.py
client-gui/: package-lock.json  package.json
client-gui/src/: App.css  App.js
client-gui/src/components/: CommandsList.js  InputWrapper.js  OpenScreen.js  Response.js  ServerScan.js  UserInput.js
